ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
spec:
  ingressClassName: nginx-example
  rules:
    - http:
        paths:
          - path: /helloWorld
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 80
